--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
  <head>
  <body>
    <h1> Un super titre pour git ! </h1>
+   <p> Bonjour et bienvenu sur mon site pour pouvoir apprendre pleins
+ de choses </p>
  </body>
 </html>
